--- a/package.xml
+++ b/package.xml
@@ -9,10 +9,6 @@
 
   <license>BSD-3</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <export>
-    <build_type>ament_cmake</build_type>
-  </export>
+  <buildtool_depend>catkin</buildtool_depend>
 
 </package>
